Fixed side spacing and widget width for small screens in the "add recipe" modal.

--- a/styles/modals/add-recipe/AddRecipe.module.scss
+++ b/styles/modals/add-recipe/AddRecipe.module.scss
@@ -3,8 +3,8 @@
   z-index: 1;
 
   display: grid;
-  $sidePadding: .5em;
-  grid-template-columns: minmax($sidePadding, 1fr) auto minmax($sidePadding, 1fr);
+  $sidePadding: 1em;
+  grid-template-columns: minmax($sidePadding, 1fr) minmax(288px, 405px) minmax($sidePadding, 1fr);
 
   width: 100%;
   min-height: 100vh;
